# forthy-two

./: .atom-build.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  make.sh  uncrustify.cfg
apps/: CMakeLists.txt  forthytwo_main.cpp
doc/: tutorial.md
examples/: CMakeLists.txt  bottles.42  bottles.t42  euler1.42  euler1.t42  hello.42
forth/: CMakeLists.txt  parser.cpp  parser.hpp  runtime.cpp  runtime.hpp  tester.cpp  tester.hpp
test/: CMakeLists.txt  test_runtime_main.cpp  test_tester_main.cpp
